@@ -22,7 +22,6 @@
 package org.isf.medtype.rest;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.validation.Valid;
 
@@ -35,7 +34,6 @@ import org.isf.utils.exception.OHServiceException;
 import org.isf.utils.exception.model.OHExceptionMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -45,109 +43,117 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
-@RestController(value = "/medicaltypes")
+@RestController
 @Tag(name = "Medical Types")
 @SecurityRequirement(name = "bearerAuth")
+@RequestMapping(produces = MediaType.APPLICATION_JSON_VALUE)
 public class MedicalTypeController {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(MedicalTypeController.class);
 
-	@Autowired
-	private MedicalTypeBrowserManager medicalTypeBrowserManager;
+	private final MedicalTypeBrowserManager medicalTypeBrowserManager;
 
-	@Autowired
-	private MedicalTypeMapper medicalTypeMapper;
-	
+	private final MedicalTypeMapper medicalTypeMapper;
+
+	public MedicalTypeController(
+		MedicalTypeBrowserManager medicalTypeBrowserManager, MedicalTypeMapper medicalTypeMapper
+	) {
+		this.medicalTypeBrowserManager = medicalTypeBrowserManager;
+		this.medicalTypeMapper = medicalTypeMapper;
+	}
+
 	/**
 	 * Retrieves all the medical types.
 	 * @return the found medical types.
-	 * @throws OHServiceException 
+	 * @throws OHServiceException When failed to get medical types
 	 */
-	@GetMapping(value = "/medicaltypes", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<List<MedicalTypeDTO>> getMedicalTypes() throws OHServiceException {
+	@GetMapping(value = "/medicaltypes")
+	public List<MedicalTypeDTO> getMedicalTypes() throws OHServiceException {
 		LOGGER.info("Retrieving all the medical types ...");
-		List<MedicalType> medicalTypes = medicalTypeBrowserManager.getMedicalType();
-		List<MedicalTypeDTO> mappedMedicalTypes = medicalTypeMapper.map2DTOList(medicalTypes);
-		if (mappedMedicalTypes.isEmpty()) {
-			LOGGER.info("No medical type found");
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(mappedMedicalTypes);
-		} else {
-			LOGGER.info("Found {} medical types", mappedMedicalTypes.size());
-			return ResponseEntity.ok(mappedMedicalTypes);
-		}
+		return medicalTypeMapper.map2DTOList(medicalTypeBrowserManager.getMedicalType());
 	}
-	
+
 	/**
 	 * Saves the specified medical type.
 	 * @param medicalTypeDTO the medical type to save.
 	 * @return {@link ResponseEntity} with status {@code HttpStatus.CREATED} if the medical type has been saved.
-	 * @throws OHServiceException 
+	 * @throws OHServiceException When failed to create medical type
 	 */
-	@PostMapping(value = "/medicaltypes", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<MedicalTypeDTO> createMedicalType(@RequestBody @Valid MedicalTypeDTO medicalTypeDTO) throws OHServiceException {
-		MedicalType isCreatedMedicalType = medicalTypeBrowserManager.newMedicalType(medicalTypeMapper.map2Model(medicalTypeDTO));
+	@PostMapping(value = "/medicaltypes")
+	@ResponseStatus(HttpStatus.CREATED)
+	public MedicalTypeDTO createMedicalType(@RequestBody @Valid MedicalTypeDTO medicalTypeDTO) throws OHServiceException {
+		MedicalType isCreatedMedicalType = medicalTypeBrowserManager.newMedicalType(
+			medicalTypeMapper.map2Model(medicalTypeDTO)
+		);
+
 		if (isCreatedMedicalType == null) {
-            throw new OHAPIException(new OHExceptionMessage("Medical type not created."));
-        }
-        return ResponseEntity.status(HttpStatus.CREATED).body(medicalTypeMapper.map2DTO(isCreatedMedicalType));
+			throw new OHAPIException(new OHExceptionMessage("Medical type not created."));
+		}
+
+		return medicalTypeMapper.map2DTO(isCreatedMedicalType);
 	}
-	
+
 	/**
 	 * Updates the specified medical type.
 	 * @param medicalTypeDTO the medical type to update.
 	 * @return {@link ResponseEntity} with status {@code HttpStatus.OK} if the medical type has been updated.
-	 * @throws OHServiceException 
+	 * @throws OHServiceException When failed to update medical type
 	 */
-	@PutMapping(value = "/medicaltypes", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<MedicalTypeDTO> updateMedicalType(@RequestBody @Valid MedicalTypeDTO medicalTypeDTO) throws OHServiceException {
+	@PutMapping(value = "/medicaltypes")
+	public MedicalTypeDTO updateMedicalType(@RequestBody @Valid MedicalTypeDTO medicalTypeDTO) throws OHServiceException {
 		MedicalType medicalType = medicalTypeMapper.map2Model(medicalTypeDTO);
 		if (!medicalTypeBrowserManager.isCodePresent(medicalType.getCode())) {
-			throw new OHAPIException(new OHExceptionMessage("Medical type not found."));
+			throw new OHAPIException(new OHExceptionMessage("Medical type not found."), HttpStatus.NOT_FOUND);
 		}
+
 		MedicalType isUpdatedMedicalType = medicalTypeBrowserManager.updateMedicalType(medicalType);
+
 		if (isUpdatedMedicalType == null) {
-            throw new OHAPIException(new OHExceptionMessage("Medical type not updated."));
-        }
-        return ResponseEntity.ok(medicalTypeMapper.map2DTO(isUpdatedMedicalType));
+			throw new OHAPIException(new OHExceptionMessage("Medical type not updated."));
+		}
+
+		return medicalTypeMapper.map2DTO(isUpdatedMedicalType);
 	}
-	
+
 	/**
 	 * Checks if the specified medical type code is already used.
 	 * @param code - the code to check.
 	 * @return {@code true} if the code is used, {@code false} otherwise.
-	 * @throws OHServiceException 
+	 * @throws OHServiceException When failed to check if medical type code is used
 	 */
-	@GetMapping(value = "/medicaltypes/check/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Boolean> isCodeUsed(@PathVariable String code) throws OHServiceException {
-		return ResponseEntity.ok(medicalTypeBrowserManager.isCodePresent(code));
+	@GetMapping(value = "/medicaltypes/check/{code}")
+	public boolean isCodeUsed(@PathVariable String code) throws OHServiceException {
+		return medicalTypeBrowserManager.isCodePresent(code);
 	}
 
 	/**
 	 * Deletes the specified medical type.
 	 * @param code - the code of the medical type to delete.
 	 * @return {@code true} if the medical type has been deleted.
-	 * @throws OHServiceException 
+	 * @throws OHServiceException When failed to delete medical type
 	 */
-	@DeleteMapping(value = "/medicaltypes/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Boolean> deleteMedicalType(@PathVariable("code") String code) throws OHServiceException {
+	@DeleteMapping(value = "/medicaltypes/{code}")
+	public boolean deleteMedicalType(@PathVariable("code") String code) throws OHServiceException {
 		List<MedicalType> matchedMedicalTypes = medicalTypeBrowserManager.getMedicalType()
-				.stream()
-				.filter(item -> item.getCode().equals(code))
-				.collect(Collectors.toList());
-		if (!matchedMedicalTypes.isEmpty()) {
-			try {
-				medicalTypeBrowserManager.deleteMedicalType(matchedMedicalTypes.get(0));
-			} catch (OHServiceException serviceException) {
-				throw new OHAPIException(new OHExceptionMessage("Medical type not deleted."));
-			}
-			return ResponseEntity.ok(true);
-		} else {
-			throw new OHAPIException(new OHExceptionMessage("Medical type not found."));
+			.stream()
+			.filter(item -> item.getCode().equals(code)).toList();
+
+		if (matchedMedicalTypes.isEmpty()) {
+			throw new OHAPIException(new OHExceptionMessage("Medical type not found."), HttpStatus.NOT_FOUND);
+		}
+
+		try {
+			medicalTypeBrowserManager.deleteMedicalType(matchedMedicalTypes.get(0));
+			return true;
+		} catch (OHServiceException serviceException) {
+			throw new OHAPIException(new OHExceptionMessage("Medical type not deleted."));
 		}
 	}
 }
