@@ -22,7 +22,6 @@
 package org.isf.opetype.rest;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.isf.opetype.dto.OperationTypeDTO;
 import org.isf.opetype.manager.OperationTypeBrowserManager;
@@ -33,33 +32,32 @@ import org.isf.utils.exception.OHServiceException;
 import org.isf.utils.exception.model.OHExceptionMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
-@RestController(value = "/operationtypes")
+@RestController
 @Tag(name = "Operations Types")
 @SecurityRequirement(name = "bearerAuth")
+@RequestMapping(produces = MediaType.APPLICATION_JSON_VALUE)
 public class OperationTypeController {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(OperationTypeController.class);
 
-	@Autowired
-	protected OperationTypeBrowserManager opeTypeManager;
+	private final OperationTypeBrowserManager opeTypeManager;
 
-	@Autowired
-	protected OperationTypeMapper mapper;
+	private final OperationTypeMapper mapper;
 
 	public OperationTypeController(OperationTypeBrowserManager opeTypeManager, OperationTypeMapper operationTypemapper) {
 		this.opeTypeManager = opeTypeManager;
@@ -68,92 +66,84 @@ public class OperationTypeController {
 
 	/**
 	 * Create a new {@link OperationType}.
-	 * 
-	 * @param operationTypeDTO
+	 *
+	 * @param operationTypeDTO Operation Type payload
 	 * @return the newly stored {@link OperationType} object.
-	 * @throws OHServiceException
+	 * @throws OHServiceException When failed to create operation type
 	 */
-	@PostMapping(value = "/operationtypes", produces = MediaType.APPLICATION_JSON_VALUE)
-	ResponseEntity<OperationTypeDTO> newOperationType(@RequestBody OperationTypeDTO operationTypeDTO) throws OHServiceException {
+	@PostMapping("/operationtypes")
+	@ResponseStatus(HttpStatus.CREATED)
+	public OperationTypeDTO newOperationType(@RequestBody OperationTypeDTO operationTypeDTO) throws OHServiceException {
 		String code = operationTypeDTO.getCode();
 		LOGGER.info("Create Operation Type {}", code);
-		OperationType newOperationType;
+
 		try {
-			newOperationType = opeTypeManager.newOperationType(mapper.map2Model(operationTypeDTO));
+			return mapper.map2DTO(opeTypeManager.newOperationType(mapper.map2Model(operationTypeDTO)));
 		} catch (OHServiceException serviceException) {
 			throw new OHAPIException(new OHExceptionMessage("Operation Type not created."));
 		}
-		return ResponseEntity.status(HttpStatus.CREATED).body(mapper.map2DTO(newOperationType));
 	}
 
 	/**
 	 * Updates the specified {@link OperationType}.
-	 * 
-	 * @param operationTypeDTO
+	 *
+	 * @param operationTypeDTO Operation Type payload
 	 * @return the newly updated {@link OperationType} object.
-	 * @throws OHServiceException
+	 * @throws OHServiceException When failed to update operation type
 	 */
-	@PutMapping(value = "/operationtypes/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	ResponseEntity<OperationTypeDTO> updateOperationTypes(@PathVariable String code, @RequestBody OperationTypeDTO operationTypeDTO)
-					throws OHServiceException {
+	@PutMapping("/operationtypes/{code}")
+	public OperationTypeDTO updateOperationTypes(
+		@PathVariable String code, @RequestBody OperationTypeDTO operationTypeDTO
+	) throws OHServiceException {
 		LOGGER.info("Update operationtypes code: {}", operationTypeDTO.getCode());
+
 		OperationType opeType = mapper.map2Model(operationTypeDTO);
 		if (!opeTypeManager.isCodePresent(code)) {
-			throw new OHAPIException(new OHExceptionMessage("Operation Type not found."));
+			throw new OHAPIException(new OHExceptionMessage("Operation Type not found."), HttpStatus.NOT_FOUND);
 		}
-		OperationType updatedOperationType;
+
 		try {
-			updatedOperationType = opeTypeManager.updateOperationType(opeType);
+			return mapper.map2DTO(opeTypeManager.updateOperationType(opeType));
 		} catch (OHServiceException serviceException) {
 			throw new OHAPIException(new OHExceptionMessage("Operation Type not updated."));
 		}
-		return ResponseEntity.ok(mapper.map2DTO(updatedOperationType));
 	}
 
 	/**
 	 * Get all the available {@link OperationType}s.
-	 * 
+	 *
 	 * @return a {@link List} of {@link OperationType} or NO_CONTENT if there is no data found.
-	 * @throws OHServiceException
+	 * @throws OHServiceException When failed to get operation types
 	 */
-	@GetMapping(value = "/operationtypes", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<List<OperationTypeDTO>> getOperationTypes() throws OHServiceException {
+	@GetMapping("/operationtypes")
+	public List<OperationTypeDTO> getOperationTypes() throws OHServiceException {
 		LOGGER.info("Get all operation Types ");
-		List<OperationType> operationTypes = opeTypeManager.getOperationType();
-		List<OperationTypeDTO> operationTypeDTOs = mapper.map2DTOList(operationTypes);
-		if (operationTypeDTOs.isEmpty()) {
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(operationTypeDTOs);
-		} else {
-			return ResponseEntity.ok(operationTypeDTOs);
-		}
+
+		return mapper.map2DTOList(opeTypeManager.getOperationType());
 	}
 
 	/**
 	 * Delete {@link OperationType} with the specified code.
-	 * 
-	 * @param code
+	 *
+	 * @param code Operation Type code
 	 * @return {@code true} if the {@link OperationType} has been deleted, {@code false} otherwise.
-	 * @throws OHServiceException
+	 * @throws OHServiceException When failed to delete operation type
 	 */
-	@DeleteMapping(value = "/operationtypes/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Boolean> deleteOperationType(@PathVariable("code") String code) throws OHServiceException {
+	@DeleteMapping("/operationtypes/{code}")
+	public boolean deleteOperationType(@PathVariable("code") String code) throws OHServiceException {
 		LOGGER.info("Delete Operation Type code: {}", code);
-		if (opeTypeManager.isCodePresent(code)) {
-			List<OperationType> opeTypes = opeTypeManager.getOperationType();
-			List<OperationType> opeTypeFounds = opeTypes.stream().filter(ad -> ad.getCode().equals(code))
-							.collect(Collectors.toList());
-			if (!opeTypeFounds.isEmpty()) {
-				try {
-					opeTypeManager.deleteOperationType(opeTypeFounds.get(0));
-				} catch (OHServiceException serviceException) {
-					LOGGER.error("Delete Operation Type code: {} failed.", code);
-					throw new OHAPIException(new OHExceptionMessage("Operation Type not deleted."));
-				}
-			}
-		} else {
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+		List<OperationType> opeTypes = opeTypeManager.getOperationType();
+		List<OperationType> opeTypeFounds = opeTypes.stream().filter(ad -> ad.getCode().equals(code)).toList();
+		if (opeTypeFounds.isEmpty()) {
+			throw new OHAPIException(new OHExceptionMessage("Operation Type not found."), HttpStatus.NOT_FOUND);
 		}
-		return ResponseEntity.ok(true);
-	}
 
+		try {
+			opeTypeManager.deleteOperationType(opeTypeFounds.get(0));
+			return true;
+		} catch (OHServiceException serviceException) {
+			LOGGER.error("Delete Operation Type code: {} failed.", code);
+			throw new OHAPIException(new OHExceptionMessage("Operation Type not deleted."));
+		}
+	}
 }
